syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = '/grpc';

package chat.v1;

// チャットのCRUD操作に対応するservice型
service ChatService {
  rpc ListChat(ListChatsRequest) returns (ListChatsResponse);
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
}

// チャット情報を表すmessage型
message Chat {
  string id = 1; // チャットの一意なID (UUID)
  string user_id = 2; // チャットを投稿したユーザーのID (UUID)
  string body = 3; // チャットの本文
  bool is_read = 4; // 既読フラグ
  google.protobuf.Timestamp created_at = 5; // チャット作成日時
  google.protobuf.Timestamp updated_at = 6; // チャット情報更新日時
}

message ListChatsRequest {
  string user_id = 1; // チャットを取得するユーザーのID
}

message ListChatsResponse {
  repeated Chat chats = 1; // 取得されたチャットの情報
}

// チャットを作成するためのリクエストmessage型
message CreateChatRequest {
  string user_id = 1; // チャットを投稿するユーザーのID
  string body = 2; // チャットの本文
}

// チャットを作成した結果を返すレスポンスmessage型
message CreateChatResponse {
  Chat chat = 1; // 作成されたチャットの情報
}

// チャットを削除するためのリクエストmessage型
message DeleteChatRequest {
  string id = 1; // チャットの一意なID
}